Renamed KDTown to KDKingdom, autofill fix, disband(wip) and leave implementation, created PersistenceUtil + tons of extra stuff